notes 2017-12-18